# demand-cli

./: Cargo.toml
src/: main.rs  status.rs
src/ingress/: mod.rs  sv1_ingress.rs
src/jd_client/: downstream.rs  error.rs  mod.rs  task_manager.rs
src/jd_client/job_declarator/: mod.rs  setup_connection.rs  task_manager.rs
src/jd_client/lib/: downstream.rs  mod.rs  proxy_config.rs
src/jd_client/lib/job_declarator/: mod.rs
src/jd_client/lib/template_receiver/: mod.rs  setup_connection.rs
src/jd_client/lib/upstream_sv2/: upstream.rs
src/jd_client/mining_downstream/: mod.rs  task_manager.rs
src/jd_client/mining_upstream/: mod.rs  task_manager.rs  upstream.rs
src/jd_client/template_receiver/: message_handler.rs  mod.rs  task_manager.rs
src/jd_client/upstream_sv2/: mod.rs  task_manager.rs  upstream.rs
src/minin_pool_connection/: mod.rs  task_manager.rs
src/share_accounter/: mod.rs  task_manager.rs
src/shared/: error.rs  mod.rs  utils.rs
src/translator/: error.rs  mod.rs  task_manager.rs  utils.rs
src/translator/downstream/: accept_connection.rs  diff_management.rs  downstream.rs  mod.rs  notify.rs  receive_from_downstream.rs  send_to_downstream.rs  task_manager.rs
src/translator/proxy/: bridge.rs  mod.rs  next_mining_notify.rs  task_manager.rs
src/translator/upstream/: diff_management.rs  mod.rs  task_manager.rs  upstream.rs
