[package]
name = "demand-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = {version = "0.29.1", features = ["serde","rand"]}
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio-util = { version = "*", features = ["codec"] }
nohash-hasher = "*"
futures = "*"
async-recursion = "1.0.0"
lazy_static = "1.4.0"
rand = "0.8.4"
jemallocator = "*"
roles_logic_sv2 = "1.2.1"
sv1_api = "1.0.1"
demand-sv2-connection = "0.0.3"
noise_sv2 = "1.1.0"
key-utils = "1.0.0"
codec_sv2 = { version = "1.2.1", features = ["noise_sv2","with_buffer_pool"]}
binary_sv2 = "1.1.0"
tracing = { version = "0.1" }
tracing-subscriber = "*"
tokio = {version="^1.36.0",features = ["full","tracing"]}
framing_sv2 = "^2.0.0"
demand-share-accounting-ext = "0.0.6"
#demand-share-accounting-ext = { version = "0.0.6", path = "../demand-share-accounting-ext"}

[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.8"

[profile.release]
strip = true
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'

